--- a/app/assets/styles/modules/_header-case.css
+++ b/app/assets/styles/modules/_header-case.css
@@ -8,7 +8,8 @@
         padding-left: 40px;
 
         &.header__case--content {
-            padding-left: 100px;
+            padding-left: 90px;
+            padding-right: 30px;
         }
         &.header__case--content.narrow{
             padding-left: 30px;
@@ -79,6 +80,7 @@
     }
     &--img {
         width: 47%;
+        /* padding-right: 100px; */
 
         & img {
             width: 100%;
