--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -177,6 +177,11 @@
         }
         &--flex-img {
             width: 783px;
+
+            > img.queens {
+                width: 100%; 
+                height: 100vh;
+            }
         }
     }
     &__swiper--area {
@@ -390,10 +395,16 @@ color: #FFFFFF;
         padding:0px 0px 45px 70px;
         width: 100%;
     }
-    .portfolio__item--flex-img {
+    .portfolio__item--flex-img
+    
+    {
         width: 100%;
+        /* height: 100%; */
+    }
+    .portfolio__item--flex-img img.queens {
         height: 100%;
     }
+    
     .portfolio__swiper--area {
         width: 40%;
     }
