--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -177,6 +177,7 @@
         }
         &--flex-img {
             width: 783px;
+            height: 640px;
 
             > img.queens {
                 width: 100%; 
@@ -355,10 +356,21 @@ color: #FFFFFF;
         line-height: 63px;
     }
 }
-
-@media only screen and (max-width:1200px){
+@media only screen and (max-width:1300px){
     .portfolio__title {
-        font-size: 40px;
+        line-height: 66px;
+        font-size: 43px;
+        white-space: normal;
+    }
+    .portfolio__title.responsive__title {
+        line-height: 66px;
+        font-size: 43px;
+        white-space: normal;
+    }
+}
+@media only screen and (max-width:1220px){
+    .portfolio__title {
+        font-size: 32px;
         line-height: 63px;
     }
     .portfolio__title.saint, .portfolio__title.queens {
@@ -378,28 +390,49 @@ color: #FFFFFF;
     }
     .portfolio__title {
         font-size: 33px;
-        line-height: 63px;
+        line-height: 46px;
     }
     .portfolio__item--flex-text {
-        width: 40%;
+        width:39%;
     }
     .portfolio__item--flex-text li {
         line-height: 22px;
     }
 }
+
+@media only screen and (min-width:1005px){
+    .portfolio__title.responsive__title {
+        line-height: 50px;
+        font-size: 30px;
+    }
+}
+@media only screen and (min-width:1245px){
+    .portfolio__title.responsive__title {
+        line-height: 66px;
+        font-size: 43px;
+        white-space: normal;
+    }
+}
+
 @media only screen and (max-width:1005px){
     .portfolio__container.web {
         flex-direction: column;
     }
     .portfolio__item--flex-text {
-        padding:0px 0px 45px 70px;
+        padding:20px 0px 45px 70px;
         width: 100%;
     }
     .portfolio__item--flex-img
     
     {
         width: 100%;
-        /* height: 100%; */
+        height: auto;
+    }
+    .no-break{
+        display: none;
+    }
+    .swiper-2 > .swiper-wrapper > .swiper-slide > div > .portfolio__item--flex-text {
+        padding: 18px 0px 90px 70px;
     }
     .portfolio__item--flex-img img.queens {
         height: 100%;
@@ -437,13 +470,19 @@ color: #FFFFFF;
         min-height: 521px;
         height: 521px;
     }
+    .swiper-2 > .swiper-wrapper > .swiper-slide > div > .portfolio__item--flex-text {
+        padding:30px 0px 70px 30px;
+        min-height: auto;
+        margin-bottom: 30px;
+        height: auto;
+    }
     .portfolio__swiper--area {
         width: 60%;
-        padding: 20px;
+        padding: 14px;
     }
     .portfolio__title {
-        font-size: 40px;
-        line-height: 70px;
+        font-size: 30px;
+        line-height: 48px;
     }
     
 }
@@ -455,7 +494,7 @@ color: #FFFFFF;
     .portfolio__title,
     .portfolio__title.saint, 
     .portfolio__title.queens {
-        font-size: 30px;
+        font-size: 25px;
     }
 }
     
@@ -470,5 +509,12 @@ color: #FFFFFF;
     .portfolio__dash {
         margin: 0 4px;
     }
-    
+    .portfolio__title,
+    .portfolio__title.saint, 
+    .portfolio__title.queens {
+        font-size: 21px;
+    }
+    .portfolio__title:after {
+        width: 75px;
+    }
 }
