--- a/app/assets/styles/modules/_swiper.css
+++ b/app/assets/styles/modules/_swiper.css
@@ -1,4 +1,4 @@
-.swiper-container, .swiper-container-two,.swiper-container-three {
+.swiper-container,.swiper-1, .swiper-container-two,.swiper-container-three, .swiper-container--brand {
     width: 100%;
     height: 100%;
 }
