--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -10,9 +10,10 @@
 
     &__sub-text{
         font-weight: 300;
-        font-size: 1.2rem;
+        font-size: 1.0rem;
         margin: 30px 0;
         color: #000000;
+        line-height: 26px;
         
     }
     &__spot {
