--- a/app/assets/styles/modules/_recognition.css
+++ b/app/assets/styles/modules/_recognition.css
@@ -82,6 +82,66 @@
             width: 100%;
         }
     }
+    &__overlay {
+        position: absolute;
+        background: rgba(0, 0, 0, 0.8);
+        width: 100%;
+        height: 0%;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 11;
+        opacity: 0;
+
+        /* & > a {
+            opacity: 0;
+        } */
+
+        &--show {
+            transition: height 0.4s ease-out;
+            height:100%;
+            opacity: 1;
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        &:before {
+            content: '';
+            width:30px;
+            height:3px;
+            background:white;
+            display:block;
+            position:absolute;
+            top:0px;
+            right:0px;
+            transform: rotate(45deg);
+            transform-origin:
+
+
+        }
+        &:after {
+            content: '';
+            width:30px;
+            height:3px;
+            background:white;
+            display:block;
+            /* position: absolute; */
+            /* top: -60px; */
+            position:absolute;
+            top:0px;
+            right:0px;
+            transform: rotate(-45deg);
+            transform-origin: center;
+
+        }
+    }
     
 }
 @keyframes shake {
