--- a/app/assets/styles/modules/_blog-story.css
+++ b/app/assets/styles/modules/_blog-story.css
@@ -39,13 +39,13 @@
         font-style: normal;
         font-weight: 600;
         font-size: 30px;
-        line-height: 64px;
+        line-height: 38px;
         color: #FB5A1E; 
-        white-space: nowrap;
+        /* white-space: nowrap; */
         
         &.blog__story--italics {
             font-style: italic;
-            line-height: 91px;
+            line-height: 38px;
             text-align: center;
         }
     }
@@ -189,7 +189,11 @@
 }
 @media only screen and (max-width:350px){
     .blog__story h3, .blog__story h4 {
-        font-size: 18px;
+        font-size: 16px;
+        line-height: 28px;
+    }
+    .blog__story h3.blog__story--italics {
+        line-height: 28px;
     }
 
 }
