--- a/app/assets/styles/modules/_testimonials.css
+++ b/app/assets/styles/modules/_testimonials.css
@@ -99,6 +99,7 @@
             &--adjusted{
                 padding-left: 8%;
                 padding-top: 12px;
+                font-weight: 600;
             }
         }
     }
