--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -53,11 +53,19 @@
     &__img{
         margin-right: 10px;
         width: 8px;
+        /* margin: 0 auto; */
+        margin-left: 2px;
+
 
         &--header{
             /* margin-right: 16px; */
             width: 25px;
         }
+    }
+
+    &--content {
+        font-size: 12px;
+        padding: 12px 13px;
     }
 
     &--header{
