--- a/app/assets/styles/modules/_portfolio_section.css
+++ b/app/assets/styles/modules/_portfolio_section.css
@@ -130,6 +130,7 @@
         transition: all .2s ease-in-out;
         width: 100%;
         padding: 40px 60px;
+        position: relative;
         &--half{
             width: 48%;
             flex-direction: column;
@@ -141,7 +142,15 @@
             font-size: 50px;
             line-height: 32px;
             text-align: left;
-            color: #FFFFFF;            
+            color: #FFFFFF; 
+            
+            &.escape {
+                font-family: sofia pro;
+
+                &.colored {
+                    color:#333333;
+                }
+            }
         }
         & p {
             font-family: Sofia Pro;
@@ -386,6 +395,7 @@
         color: #333333;
         padding-bottom: .7rem;
         line-height: 94px;
+        /* font-family: sofia pro; */
 
         &--afiaanyi{
             color: #fff;
@@ -420,6 +430,9 @@
         &--afiaanyi, &--miss{
             color: #fff;
         }
+        &.colored {
+            color: #FB5A1E; 
+        }
     }
 
     &__text-content{
@@ -432,6 +445,9 @@
 
         &--afiaanyi, &--miss{
             color: #fff;
+        }
+        &.colored {
+            color: #333333;
         }
     }
     &__desc-content {
@@ -495,6 +511,9 @@
     &__tworeport{
         width: 42%;    
     }
+    &__image-casing{
+        width: 56%;    
+    }
 
     &__ellipse{
         position: absolute;
@@ -519,14 +538,150 @@
         top: 10%;
         
     }
+    &-modal {
+        position: fixed;
+        height: 0vh;
+        width: 100%;
+        opacity: 0;
+        top: 0;
+        /* left: 0; */
+        z-index: 100;
+        pointer-events: none;
+
+        &-show {
+            opacity: 1;
+            height: 100vh;
+            pointer-events:all;
+        }
+
+        &-container {
+            
+            margin:0 auto;
+            width:100%;
+            height:100%;
+            display:flex;
+            align-items:center;
+            background: rgba(0, 0, 0, 0.71);
+
+
+            & > div {
+                display: flex;
+            flex-direction:column;
+            align-items:center;
+            justify-content:center;
+            padding: 45px 60px;
+            background: white;
+            border-radius: 10px;
+            width:48%;
+            position: relative;
+            /* height: 85%; */
+            margin:0 auto;
+            /* height: 86%; */
+
+
+            & p {
+                font-family: Sofia Pro;
+                font-style: normal;
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 24px;
+                /* or 175% */
+                
+                text-align: center;
+                
+                color: rgba(51, 51, 51, 0.75);
+                
+                                
+            }
+            }
+        }
+        &-bg {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 16%;
+
+            & img {
+                width: 100%;
+            }
+        }
+        &-img {
+            width: 83%;
+            & img {
+                width: 100%;
+            }
+
+            &.mom {
+                width: 69%;
+            }
+        }
+        &-logo {
+            width: 30%;
+            padding: 20px 0px;
+
+            &.trudata {
+                width: 14%;
+                padding:0
+            }
+            &.mom {
+                width: 16%;
+                padding: 5px 0px;
+            }
+
+            & img {
+                width: 100%;
+            }
+        }
+        
+        &-container > div.portfolio-section-modal-closed {
+            position: absolute;
+            right:19%;
+            top:9%;
+            padding: 10px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: rgba(0, 0, 0, 0.25);
+
+            & img {
+                width: 100%;
+            }
+        }
+    }
+    &-next {
+        background: #C4C4C4;
+        right: 31%;
+        bottom: 14%;
+    }
+    &-prev {
+        background: #C4C4C4;
+        right: 36%;
+        bottom: 14%;
+    }
 }
 
 
+@media only screen and (min-width: 1244px){
+    .portfolio-section-item h2.escape{
+        line-height: 44px;
+    }
+    
+}
 @media only screen and (max-width: 1244px){
     .portfolio-section-item h2{
         font-size: 42px;
     }
+    
 }
+
+@media only screen and (max-width: 1100px){
+    .portfolio-section__img {
+        width: 100%;
+    }
+    
+}
+
+
 @media only screen and (max-width: 1078px){
     .portfolio-section-item h2{
         font-size: 36px;
@@ -567,6 +722,34 @@
     {
         width: 100%;
     }
+    .portfolio-section-modal-container > div {
+        padding: 30px;
+    }
+    .portfolio-section__image-casing > img {
+        transform: translateX(0);
+    }
+}
+@media only screen and (max-width: 820px){
+    .portfolio-section__right-container{
+        display: none;
+    }
+    .portfolio-section__left-container {
+        width: 100%;
+    }
+}
+@media only screen and (max-width:780px){
+    
+    .portfolio-section-modal-container > div {
+        width: 70%;
+    }
+    .portfolio-section-prev {
+        right: 33%;
+        bottom: 9%;
+    }
+    .portfolio-section-next {
+        right: 24%;
+        bottom: 9%;
+    }
 }
 @media only screen and (max-width:768px){
     
@@ -585,21 +768,6 @@
         line-height: 24px;
     }
 }
-@media only screen and (max-width: 1100px){
-    .portfolio-section__img {
-        width: 100%;
-    }
-    
-}
-
-@media only screen and (max-width: 820px){
-    .portfolio-section__right-container{
-        display: none;
-    }
-    .portfolio-section__left-container {
-        width: 100%;
-    }
-}
 
 @media only screen and (max-width: 750px){
     .portfolio-section__btn{
@@ -607,11 +775,53 @@
         margin-bottom: 16px;
     }
 }
+@media only screen and (max-width: 700px){
+    .portfolio-section-prev {
+        right: 33%;
+        bottom: 11%;
+    }
+    .portfolio-section-next {
+        right: 24%;
+        bottom: 11%;
+    }
+}
+@media only screen and (max-width: 650px){
+    .portfolio-section-prev {
+        right: 31%;
+        bottom: 14%;
+    }
+    .portfolio-section-next {
+        right: 21%;
+        bottom: 14%;
+    }
+}
+@media only screen and (max-width: 600px){
+    .portfolio-section-modal-container > div p {
+        font-size: 15px;
+    }
+    .portfolio-section-modal-container > div.portfolio-section-modal-closed {
+        top: 11%;
+    }
+}
+@media only screen and (max-width: 568px){
+    .portfolio-section-modal-container > div {
+        width: 75%;
+    }
+    .portfolio-section-prev {
+        right: 31%;
+        bottom: 15%;
+    }
+    .portfolio-section-next {
+        right: 19%;
+        bottom: 15%;
+    }
+}
 @media only screen and (max-width: 520px){
     .portfolio-section__desc-content span {
         font-size: 16px;
         line-height: 25px;
         padding-right: 14px;
+        white-space: nowrap;
     }
     .portfolio-section__text-content-title {
         font-size: 3.0rem;
@@ -626,6 +836,23 @@
         padding: 23px 0px;
     }
 }
+@media only screen and (max-width: 512px){
+    .portfolio-section-modal-container > div p.tworeport {
+        font-size: 16px;
+    }
+    .portfolio-section-modal-container > div {
+        width: 80%;
+    }
+    .portfolio-section-prev {
+        right: 27%;
+        bottom: 15%;
+    }
+    .portfolio-section-next {
+        right: 16%;
+        bottom: 15%;
+    }
+    
+}
 @media only screen and (max-width: 425px){
     .portfolio-section-item,
     .portfolio-section-item.fave, 
@@ -638,5 +865,67 @@
     .portfolio-section__img-markup {
         transform: translateX(-20px);
     }
+    .portfolio-section-modal-container > div {
+        width: 88%;
+    }
+    .portfolio-section-modal-container > div.portfolio-section-modal-closed {
+        right: 11%;
+        width: 30px;
+        height: 30px;
+        padding: 8px;
+    }
+    .portfolio-section-prev,
+    .portfolio-section-next {
+        width: 20px;
+        height: 20px;
+        bottom: 16%;
+
+        & img {
+            width: 36%;
+        }
+    }
+    .portfolio-section-modal-container > div {
+        padding: 15px;
+    }
+    .portfolio-section-modal-container > div.portfolio-section-modal-closed {
+        top: 15%;
+    }
+    .portfolio-section-prev {
+        right: 25%;
+        
+    }
+    .portfolio-section-next {
+        right: 12%;
+       
+    }
+    .portfolio-section-item p {
+        font-size: 13px;
+    }
+    .portfolio-section__text {
+        font-size: 1.0rem;
+    }
+}
+@media only screen and (max-width: 368px){
+    .portfolio-section-modal-container > div p {
+        font-size: 13px;
+    }
+    .portfolio-section-modal-container > div p.tworeport {
+        font-size: 14px;
+    }
+    .portfolio-section-prev,
+    .portfolio-section-next {
+       
+        bottom: 17%;
+    }
+    .portfolio-section-prev {
+       
+        right: 22%;
+    }
+}
+@media only screen and (max-width: 368px){
     
+    
+    .portfolio-section-modal-container > div.portfolio-section-modal-closed {
+        top: 17%;
+    }
 }
