--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -287,7 +287,7 @@
                 
                 & a  {
                     border-bottom: 5px solid #FB5A1E;
-                    font-size: 20px;
+                    /* font-size: 20px; */
                     font-weight: 300;
                 transition: all 0.3s ease-in;
                 white-space:nowrap;
